# FBL

./: .gitignore  README.md  init.bash
Backend/: .env  backup.sql  go.mod  go.sum
Backend/cmd/: .bot.go.swp  bot.go  main.go
Backend/config/: config.go  config.yaml
Backend/internal/CapitanHandlers/: CRUDCapitans.go
Backend/internal/WSH/: webserver.go
Backend/internal/bot/: bot.go
Backend/internal/db/: db.go
Backend/internal/matchHandlers/: .CRUDMatches.go.swp  CRUDMatches.go
Backend/internal/messagesHandlers/: messageHandler.go
Backend/internal/models/: handler.go  player.go  stats.go  team.go
Backend/internal/ownerHandlers/: ownerHandler.go
Backend/internal/teamHandlers/: CRUDTeams.go
Backend/internal/tempDataHandlers/: tempHandler.go
Backend/internal/userHandlers/: CRUDUsers.go
Backend/scripts/: migrate.sh
FastBL/: docker-compose.yaml  go.mod
FastBL/cmd/: bot.go
FastBL/internal/WSH/: webserver.go
FastBL/internal/matchHandlers/: CRUDMatches.go
FastBL/internal/models/: match.go
FastBL/internal/teamHandlers/: CRUDTeams.go
FrontEnd/static/scripts/: fetchTeams.js  main.js  matches.js  (+3 more)
FrontEnd/templates/: index.html  matches.html  teams.html
tgBot/: go.mod  go.sum
tgBot/cmd/: bot.go  main.go
tgBot/scripts/: migrate.sh
tgbot/: .main.cpp.swo  .main.cpp.swp  go.mod  main.go
tgbot/cppbot/: CMakeLists.txt  auth_manager.cpp  auth_manager.h  main  main.cpp  models.cpp  models.h  tg_bot.cpp  tg_bot.h
tgbot/cppbot/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
tgbot/internal/: auth_manager.go
tgbot/pkg/: models.go
(+24 files in other folders)
